# sport-huddle-hub

./: .env.example  .gitignore  README.md  alembic.ini  elo-compare-all-years.sh  elo-compare-performance.sh  elo-retrain.sh  elo-weekly-retrain.sh  enhanced_predictions_route.py  finalize-phase2.sh  fix-stadium-field.sh  frontend-updates.txt  index.html  package-lock.json  phase2-fixhealth.sh  phase2-setup.sh  phase3-setup.sh  phase4-setup.sh  pyproject.toml  quick-test.sh  setup-phase1.sh  setup_nflverse_r.sh  tailwind.config.ts  test_nflverse_integration.py  tsconfig.json  update-app.py  validate-phase1.sh
api/: app.py  config.py  deps.py  logging.py  test-providers.py  update-app.py
elo_backups/: elo_backup_20250919_114022.json  elo_backup_20250919_114448.json  elo_backup_20250919_115135.json  elo_backup_20250919_115231.json  elo_backup_20250919_115338.json  elo_backup_20250919_120120.json  elo_backup_20250919_121623.json  elo_backup_20250919_121918.json  elo_backup_20250919_133607.json
ops/: api.Dockerfile  docker-compose.yml  fix-predictions-complete.sh  games.csv
scripts/: analyze-model-accuracy.sh  check-nflverse-columns.sh  check-stored-predictions.sh  comprehensive-player-migration.sh  debug-api-predictions.sh  debug-script.sh  deploy-multimodel.sh  diagnose-prediction-discrepancy.sh  diagnose-predictions-issue.sh  elo-check-status.sh  elo-quick-update.sh  elo-recent-retrain.sh  elo-rollback.sh  fetch-complete-espn-stats.sh  fetch-espn-stats-fixed.sh  fix-elo-save.sh  fix-nflverse-adapter-times.sh  fix-predict-game-signature.sh  fix-predictions-completely.sh  (+10 more)
(+58 files in other folders)
